examples/valid/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> root
Rule 1     root -> decls
Rule 2     decls -> decls decl
Rule 3     decls -> decl
Rule 4     decl -> varDecl
Rule 5     decl -> funcDecl
Rule 6     decl -> procDecl
Rule 7     varDecl -> ID WAS A type terminator
Rule 8     varDecl -> ID WAS A type TOO terminator
Rule 9     varDecl -> ID WAS A type OF expr terminator
Rule 10    varDecl -> ID HAD expr type terminator
Rule 11    funcDecl -> THE ROOM ID formalParams CONTAINED A type body
Rule 12    procDecl -> THE LOOKING - GLASS ID formalParams body
Rule 13    formalParams -> ( )
Rule 14    formalParams -> ( formalParamsList )
Rule 15    formalParamsList -> formalParam
Rule 16    formalParamsList -> formalParamsList , formalParam
Rule 17    formalParam -> type ID
Rule 18    formalParam -> refType ID
Rule 19    body -> OPENED decls compoundStmt CLOSED
Rule 20    body -> OPENED compoundStmt CLOSED
Rule 21    body -> OPENED CLOSED
Rule 22    compoundStmt -> compoundStmt stmt
Rule 23    compoundStmt -> stmt
Rule 24    stmt -> body
Rule 25    stmt -> .
Rule 26    stmt -> expr BECAME expr terminator
Rule 27    stmt -> expr ATE terminator
Rule 28    stmt -> expr DRANK terminator
Rule 29    stmt -> ALICE FOUND expr .
Rule 30    stmt -> expr SPOKE terminator
Rule 31    stmt -> expr SAID ALICE terminator
Rule 32    stmt -> WHAT WAS expr ?
Rule 33    stmt -> ID actualParams terminator
Rule 34    stmt -> EVENTUALLY ( expr ) BECAUSE compoundStmt ENOUGH TIMES
Rule 35    stmt -> EITHER ( expr ) SO compoundStmt OR compoundStmt BECAUSE ALICE WAS UNSURE WHICH
Rule 36    stmt -> conditionalStmt BECAUSE ALICE WAS UNSURE WHICH
Rule 37    stmt -> conditionalStmt OR compoundStmt BECAUSE ALICE WAS UNSURE WHICH
Rule 38    conditionalStmt -> PERHAPS ( expr ) SO compoundStmt
Rule 39    conditionalStmt -> conditionalStmt OR MAYBE ( expr ) SO compoundStmt
Rule 40    type -> NUMBER
Rule 41    type -> LETTER
Rule 42    type -> SENTENCE
Rule 43    refType -> SPIDER type
Rule 44    expr -> expr + expr
Rule 45    expr -> expr - expr
Rule 46    expr -> expr * expr
Rule 47    expr -> expr / expr
Rule 48    expr -> expr % expr
Rule 49    expr -> expr & expr
Rule 50    expr -> expr | expr
Rule 51    expr -> expr ^ expr
Rule 52    expr -> expr LOGICAL_OR expr
Rule 53    expr -> expr LOGICAL_AND expr
Rule 54    expr -> expr GREATER_THAN expr
Rule 55    expr -> expr LESS_THAN expr
Rule 56    expr -> expr GREATER_EQUAL expr
Rule 57    expr -> expr LESS_EQUAL expr
Rule 58    expr -> expr EQUAL expr
Rule 59    expr -> expr NOT_EQUAL expr
Rule 60    expr -> LOGICAL_NOT expr
Rule 61    expr -> ~ expr
Rule 62    expr -> + expr
Rule 63    expr -> - expr
Rule 64    expr -> ID
Rule 65    expr -> ID APOSTROPHE S expr PIECE
Rule 66    expr -> STRING_LITERAL
Rule 67    expr -> CHAR_LITERAL
Rule 68    expr -> INT_LITERAL
Rule 69    expr -> ( expr )
Rule 70    expr -> ID actualParams
Rule 71    actualParams -> ( actualParamsList )
Rule 72    actualParams -> ( )
Rule 73    actualParamsList -> expr
Rule 74    actualParamsList -> actualParamsList , expr
Rule 75    terminator -> .
Rule 76    terminator -> ,
Rule 77    terminator -> AND
Rule 78    terminator -> BUT
Rule 79    terminator -> THEN

Terminals, with rules where they appear

%                    : 48
&                    : 49
(                    : 13 14 34 35 38 39 69 71 72
)                    : 13 14 34 35 38 39 69 71 72
*                    : 46
+                    : 44 62
,                    : 16 74 76
-                    : 12 45 63
.                    : 25 29 75
/                    : 47
?                    : 32
A                    : 7 8 9 11
ALICE                : 29 31 35 36 37
AND                  : 77
APOSTROPHE           : 65
ATE                  : 27
BECAME               : 26
BECAUSE              : 34 35 36 37
BUT                  : 78
CHAR_LITERAL         : 67
CLOSED               : 19 20 21
CONTAINED            : 11
DRANK                : 28
EITHER               : 35
ENOUGH               : 34
EQUAL                : 58
EVENTUALLY           : 34
FOUND                : 29
GLASS                : 12
GREATER_EQUAL        : 56
GREATER_THAN         : 54
HAD                  : 10
ID                   : 7 8 9 10 11 12 17 18 33 64 65 70
INT_LITERAL          : 68
LESS_EQUAL           : 57
LESS_THAN            : 55
LETTER               : 41
LOGICAL_AND          : 53
LOGICAL_NOT          : 60
LOGICAL_OR           : 52
LOOKING              : 12
MAYBE                : 39
NOT_EQUAL            : 59
NUMBER               : 40
OF                   : 9
OPENED               : 19 20 21
OR                   : 35 37 39
PERHAPS              : 38
PIECE                : 65
ROOM                 : 11
S                    : 65
SAID                 : 31
SENTENCE             : 42
SO                   : 35 38 39
SPIDER               : 43
SPOKE                : 30
STRING_LITERAL       : 66
THE                  : 11 12
THEN                 : 79
TIMES                : 34
TOO                  : 8
UNSURE               : 35 36 37
WAS                  : 7 8 9 32 35 36 37
WHAT                 : 32
WHICH                : 35 36 37
^                    : 51
error                : 
|                    : 50
~                    : 61

Nonterminals, with rules where they appear

actualParams         : 33 70
actualParamsList     : 71 74
body                 : 11 12 24
compoundStmt         : 19 20 22 34 35 35 37 38 39
conditionalStmt      : 36 37 39
decl                 : 2 3
decls                : 1 2 19
expr                 : 9 10 26 26 27 28 29 30 31 32 34 35 38 39 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 61 62 63 65 69 73 74
formalParam          : 15 16
formalParams         : 11 12
formalParamsList     : 14 16
funcDecl             : 5
procDecl             : 6
refType              : 18
root                 : 0
stmt                 : 22 23
terminator           : 7 8 9 10 26 27 28 30 31 33
type                 : 7 8 9 10 11 17 43
varDecl              : 4

Generating LALR tables
Parsing method: LALR

state 0

    (0) S' -> . root
    (1) root -> . decls
    (2) decls -> . decls decl
    (3) decls -> . decl
    (4) decl -> . varDecl
    (5) decl -> . funcDecl
    (6) decl -> . procDecl
    (7) varDecl -> . ID WAS A type terminator
    (8) varDecl -> . ID WAS A type TOO terminator
    (9) varDecl -> . ID WAS A type OF expr terminator
    (10) varDecl -> . ID HAD expr type terminator
    (11) funcDecl -> . THE ROOM ID formalParams CONTAINED A type body
    (12) procDecl -> . THE LOOKING - GLASS ID formalParams body

    ID              shift and go to state 6
    THE             shift and go to state 5

    decl                           shift and go to state 1
    procDecl                       shift and go to state 3
    funcDecl                       shift and go to state 2
    varDecl                        shift and go to state 4
    decls                          shift and go to state 7
    root                           shift and go to state 8

state 1

    (3) decls -> decl .

    ID              reduce using rule 3 (decls -> decl .)
    THE             reduce using rule 3 (decls -> decl .)
    $end            reduce using rule 3 (decls -> decl .)
    .               reduce using rule 3 (decls -> decl .)
    ALICE           reduce using rule 3 (decls -> decl .)
    WHAT            reduce using rule 3 (decls -> decl .)
    EVENTUALLY      reduce using rule 3 (decls -> decl .)
    EITHER          reduce using rule 3 (decls -> decl .)
    OPENED          reduce using rule 3 (decls -> decl .)
    LOGICAL_NOT     reduce using rule 3 (decls -> decl .)
    ~               reduce using rule 3 (decls -> decl .)
    +               reduce using rule 3 (decls -> decl .)
    -               reduce using rule 3 (decls -> decl .)
    STRING_LITERAL  reduce using rule 3 (decls -> decl .)
    CHAR_LITERAL    reduce using rule 3 (decls -> decl .)
    INT_LITERAL     reduce using rule 3 (decls -> decl .)
    (               reduce using rule 3 (decls -> decl .)
    PERHAPS         reduce using rule 3 (decls -> decl .)


state 2

    (5) decl -> funcDecl .

    ID              reduce using rule 5 (decl -> funcDecl .)
    THE             reduce using rule 5 (decl -> funcDecl .)
    $end            reduce using rule 5 (decl -> funcDecl .)
    .               reduce using rule 5 (decl -> funcDecl .)
    ALICE           reduce using rule 5 (decl -> funcDecl .)
    WHAT            reduce using rule 5 (decl -> funcDecl .)
    EVENTUALLY      reduce using rule 5 (decl -> funcDecl .)
    EITHER          reduce using rule 5 (decl -> funcDecl .)
    OPENED          reduce using rule 5 (decl -> funcDecl .)
    LOGICAL_NOT     reduce using rule 5 (decl -> funcDecl .)
    ~               reduce using rule 5 (decl -> funcDecl .)
    +               reduce using rule 5 (decl -> funcDecl .)
    -               reduce using rule 5 (decl -> funcDecl .)
    STRING_LITERAL  reduce using rule 5 (decl -> funcDecl .)
    CHAR_LITERAL    reduce using rule 5 (decl -> funcDecl .)
    INT_LITERAL     reduce using rule 5 (decl -> funcDecl .)
    (               reduce using rule 5 (decl -> funcDecl .)
    PERHAPS         reduce using rule 5 (decl -> funcDecl .)


state 3

    (6) decl -> procDecl .

    ID              reduce using rule 6 (decl -> procDecl .)
    THE             reduce using rule 6 (decl -> procDecl .)
    $end            reduce using rule 6 (decl -> procDecl .)
    .               reduce using rule 6 (decl -> procDecl .)
    ALICE           reduce using rule 6 (decl -> procDecl .)
    WHAT            reduce using rule 6 (decl -> procDecl .)
    EVENTUALLY      reduce using rule 6 (decl -> procDecl .)
    EITHER          reduce using rule 6 (decl -> procDecl .)
    OPENED          reduce using rule 6 (decl -> procDecl .)
    LOGICAL_NOT     reduce using rule 6 (decl -> procDecl .)
    ~               reduce using rule 6 (decl -> procDecl .)
    +               reduce using rule 6 (decl -> procDecl .)
    -               reduce using rule 6 (decl -> procDecl .)
    STRING_LITERAL  reduce using rule 6 (decl -> procDecl .)
    CHAR_LITERAL    reduce using rule 6 (decl -> procDecl .)
    INT_LITERAL     reduce using rule 6 (decl -> procDecl .)
    (               reduce using rule 6 (decl -> procDecl .)
    PERHAPS         reduce using rule 6 (decl -> procDecl .)


state 4

    (4) decl -> varDecl .

    ID              reduce using rule 4 (decl -> varDecl .)
    THE             reduce using rule 4 (decl -> varDecl .)
    $end            reduce using rule 4 (decl -> varDecl .)
    .               reduce using rule 4 (decl -> varDecl .)
    ALICE           reduce using rule 4 (decl -> varDecl .)
    WHAT            reduce using rule 4 (decl -> varDecl .)
    EVENTUALLY      reduce using rule 4 (decl -> varDecl .)
    EITHER          reduce using rule 4 (decl -> varDecl .)
    OPENED          reduce using rule 4 (decl -> varDecl .)
    LOGICAL_NOT     reduce using rule 4 (decl -> varDecl .)
    ~               reduce using rule 4 (decl -> varDecl .)
    +               reduce using rule 4 (decl -> varDecl .)
    -               reduce using rule 4 (decl -> varDecl .)
    STRING_LITERAL  reduce using rule 4 (decl -> varDecl .)
    CHAR_LITERAL    reduce using rule 4 (decl -> varDecl .)
    INT_LITERAL     reduce using rule 4 (decl -> varDecl .)
    (               reduce using rule 4 (decl -> varDecl .)
    PERHAPS         reduce using rule 4 (decl -> varDecl .)


state 5

    (11) funcDecl -> THE . ROOM ID formalParams CONTAINED A type body
    (12) procDecl -> THE . LOOKING - GLASS ID formalParams body

    ROOM            shift and go to state 9
    LOOKING         shift and go to state 10


state 6

    (7) varDecl -> ID . WAS A type terminator
    (8) varDecl -> ID . WAS A type TOO terminator
    (9) varDecl -> ID . WAS A type OF expr terminator
    (10) varDecl -> ID . HAD expr type terminator

    WAS             shift and go to state 11
    HAD             shift and go to state 12


state 7

    (1) root -> decls .
    (2) decls -> decls . decl
    (4) decl -> . varDecl
    (5) decl -> . funcDecl
    (6) decl -> . procDecl
    (7) varDecl -> . ID WAS A type terminator
    (8) varDecl -> . ID WAS A type TOO terminator
    (9) varDecl -> . ID WAS A type OF expr terminator
    (10) varDecl -> . ID HAD expr type terminator
    (11) funcDecl -> . THE ROOM ID formalParams CONTAINED A type body
    (12) procDecl -> . THE LOOKING - GLASS ID formalParams body

    $end            reduce using rule 1 (root -> decls .)
    ID              shift and go to state 6
    THE             shift and go to state 5

    decl                           shift and go to state 13
    procDecl                       shift and go to state 3
    funcDecl                       shift and go to state 2
    varDecl                        shift and go to state 4

state 8

    (0) S' -> root .



state 9

    (11) funcDecl -> THE ROOM . ID formalParams CONTAINED A type body

    ID              shift and go to state 14


state 10

    (12) procDecl -> THE LOOKING . - GLASS ID formalParams body

    -               shift and go to state 15


state 11

    (7) varDecl -> ID WAS . A type terminator
    (8) varDecl -> ID WAS . A type TOO terminator
    (9) varDecl -> ID WAS . A type OF expr terminator

    A               shift and go to state 16


state 12

    (10) varDecl -> ID HAD . expr type terminator
    (44) expr -> . expr + expr
    (45) expr -> . expr - expr
    (46) expr -> . expr * expr
    (47) expr -> . expr / expr
    (48) expr -> . expr % expr
    (49) expr -> . expr & expr
    (50) expr -> . expr | expr
    (51) expr -> . expr ^ expr
    (52) expr -> . expr LOGICAL_OR expr
    (53) expr -> . expr LOGICAL_AND expr
    (54) expr -> . expr GREATER_THAN expr
    (55) expr -> . expr LESS_THAN expr
    (56) expr -> . expr GREATER_EQUAL expr
    (57) expr -> . expr LESS_EQUAL expr
    (58) expr -> . expr EQUAL expr
    (59) expr -> . expr NOT_EQUAL expr
    (60) expr -> . LOGICAL_NOT expr
    (61) expr -> . ~ expr
    (62) expr -> . + expr
    (63) expr -> . - expr
    (64) expr -> . ID
    (65) expr -> . ID APOSTROPHE S expr PIECE
    (66) expr -> . STRING_LITERAL
    (67) expr -> . CHAR_LITERAL
    (68) expr -> . INT_LITERAL
    (69) expr -> . ( expr )
    (70) expr -> . ID actualParams

    LOGICAL_NOT     shift and go to state 21
    ~               shift and go to state 26
    +               shift and go to state 18
    -               shift and go to state 19
    ID              shift and go to state 20
    STRING_LITERAL  shift and go to state 22
    CHAR_LITERAL    shift and go to state 24
    INT_LITERAL     shift and go to state 25
    (               shift and go to state 17

    expr                           shift and go to state 23

state 13

    (2) decls -> decls decl .

    ID              reduce using rule 2 (decls -> decls decl .)
    THE             reduce using rule 2 (decls -> decls decl .)
    $end            reduce using rule 2 (decls -> decls decl .)
    .               reduce using rule 2 (decls -> decls decl .)
    ALICE           reduce using rule 2 (decls -> decls decl .)
    WHAT            reduce using rule 2 (decls -> decls decl .)
    EVENTUALLY      reduce using rule 2 (decls -> decls decl .)
    EITHER          reduce using rule 2 (decls -> decls decl .)
    OPENED          reduce using rule 2 (decls -> decls decl .)
    LOGICAL_NOT     reduce using rule 2 (decls -> decls decl .)
    ~               reduce using rule 2 (decls -> decls decl .)
    +               reduce using rule 2 (decls -> decls decl .)
    -               reduce using rule 2 (decls -> decls decl .)
    STRING_LITERAL  reduce using rule 2 (decls -> decls decl .)
    CHAR_LITERAL    reduce using rule 2 (decls -> decls decl .)
    INT_LITERAL     reduce using rule 2 (decls -> decls decl .)
    (               reduce using rule 2 (decls -> decls decl .)
    PERHAPS         reduce using rule 2 (decls -> decls decl .)


state 14

    (11) funcDecl -> THE ROOM ID . formalParams CONTAINED A type body
    (13) formalParams -> . ( )
    (14) formalParams -> . ( formalParamsList )

    (               shift and go to state 27

    formalParams                   shift and go to state 28

state 15

    (12) procDecl -> THE LOOKING - . GLASS ID formalParams body

    GLASS           shift and go to state 29


state 16

    (7) varDecl -> ID WAS A . type terminator
    (8) varDecl -> ID WAS A . type TOO terminator
    (9) varDecl -> ID WAS A . type OF expr terminator
    (40) type -> . NUMBER
    (41) type -> . LETTER
    (42) type -> . SENTENCE

    NUMBER          shift and go to state 31
    LETTER          shift and go to state 32
    SENTENCE        shift and go to state 30

    type                           shift and go to state 33

state 17

    (69) expr -> ( . expr )
    (44) expr -> . expr + expr
    (45) expr -> . expr - expr
    (46) expr -> . expr * expr
    (47) expr -> . expr / expr
    (48) expr -> . expr % expr
    (49) expr -> . expr & expr
    (50) expr -> . expr | expr
    (51) expr -> . expr ^ expr
    (52) expr -> . expr LOGICAL_OR expr
    (53) expr -> . expr LOGICAL_AND expr
    (54) expr -> . expr GREATER_THAN expr
    (55) expr -> . expr LESS_THAN expr
    (56) expr -> . expr GREATER_EQUAL expr
    (57) expr -> . expr LESS_EQUAL expr
    (58) expr -> . expr EQUAL expr
    (59) expr -> . expr NOT_EQUAL expr
    (60) expr -> . LOGICAL_NOT expr
    (61) expr -> . ~ expr
    (62) expr -> . + expr
    (63) expr -> . - expr
    (64) expr -> . ID
    (65) expr -> . ID APOSTROPHE S expr PIECE
    (66) expr -> . STRING_LITERAL
    (67) expr -> . CHAR_LITERAL
    (68) expr -> . INT_LITERAL
    (69) expr -> . ( expr )
    (70) expr -> . ID actualParams

    LOGICAL_NOT     shift and go to state 21
    ~               shift and go to state 26
    +               shift and go to state 18
    -               shift and go to state 19
    ID              shift and go to state 20
    STRING_LITERAL  shift and go to state 22
    CHAR_LITERAL    shift and go to state 24
    INT_LITERAL     shift and go to state 25
    (               shift and go to state 17

    expr                           shift and go to state 34

state 18

    (62) expr -> + . expr
    (44) expr -> . expr + expr
    (45) expr -> . expr - expr
    (46) expr -> . expr * expr
    (47) expr -> . expr / expr
    (48) expr -> . expr % expr
    (49) expr -> . expr & expr
    (50) expr -> . expr | expr
    (51) expr -> . expr ^ expr
    (52) expr -> . expr LOGICAL_OR expr
    (53) expr -> . expr LOGICAL_AND expr
    (54) expr -> . expr GREATER_THAN expr
    (55) expr -> . expr LESS_THAN expr
    (56) expr -> . expr GREATER_EQUAL expr
    (57) expr -> . expr LESS_EQUAL expr
    (58) expr -> . expr EQUAL expr
    (59) expr -> . expr NOT_EQUAL expr
    (60) expr -> . LOGICAL_NOT expr
    (61) expr -> . ~ expr
    (62) expr -> . + expr
    (63) expr -> . - expr
    (64) expr -> . ID
    (65) expr -> . ID APOSTROPHE S expr PIECE
    (66) expr -> . STRING_LITERAL
    (67) expr -> . CHAR_LITERAL
    (68) expr -> . INT_LITERAL
    (69) expr -> . ( expr )
    (70) expr -> . ID actualParams

    LOGICAL_NOT     shift and go to state 21
    ~               shift and go to state 26
    +               shift and go to state 18
    -               shift and go to state 19
    ID              shift and go to state 20
    STRING_LITERAL  shift and go to state 22
    CHAR_LITERAL    shift and go to state 24
    INT_LITERAL     shift and go to state 25
    (               shift and go to state 17

    expr                           shift and go to state 35

state 19

    (63) expr -> - . expr
    (44) expr -> . expr + expr
    (45) expr -> . expr - expr
    (46) expr -> . expr * expr
    (47) expr -> . expr / expr
    (48) expr -> . expr % expr
    (49) expr -> . expr & expr
    (50) expr -> . expr | expr
    (51) expr -> . expr ^ expr
    (52) expr -> . expr LOGICAL_OR expr
    (53) expr -> . expr LOGICAL_AND expr
    (54) expr -> . expr GREATER_THAN expr
    (55) expr -> . expr LESS_THAN expr
    (56) expr -> . expr GREATER_EQUAL expr
    (57) expr -> . expr LESS_EQUAL expr
    (58) expr -> . expr EQUAL expr
    (59) expr -> . expr NOT_EQUAL expr
    (60) expr -> . LOGICAL_NOT expr
    (61) expr -> . ~ expr
    (62) expr -> . + expr
    (63) expr -> . - expr
    (64) expr -> . ID
    (65) expr -> . ID APOSTROPHE S expr PIECE
    (66) expr -> . STRING_LITERAL
    (67) expr -> . CHAR_LITERAL
    (68) expr -> . INT_LITERAL
    (69) expr -> . ( expr )
    (70) expr -> . ID actualParams

    LOGICAL_NOT     shift and go to state 21
    ~               shift and go to state 26
    +               shift and go to state 18
    -               shift and go to state 19
    ID              shift and go to state 20
    STRING_LITERAL  shift and go to state 22
    CHAR_LITERAL    shift and go to state 24
    INT_LITERAL     shift and go to state 25
    (               shift and go to state 17

    expr                           shift and go to state 36

state 20

    (64) expr -> ID .
    (65) expr -> ID . APOSTROPHE S expr PIECE
    (70) expr -> ID . actualParams
    (71) actualParams -> . ( actualParamsList )
    (72) actualParams -> . ( )

    +               reduce using rule 64 (expr -> ID .)
    -               reduce using rule 64 (expr -> ID .)
    *               reduce using rule 64 (expr -> ID .)
    /               reduce using rule 64 (expr -> ID .)
    %               reduce using rule 64 (expr -> ID .)
    &               reduce using rule 64 (expr -> ID .)
    |               reduce using rule 64 (expr -> ID .)
    ^               reduce using rule 64 (expr -> ID .)
    LOGICAL_OR      reduce using rule 64 (expr -> ID .)
    LOGICAL_AND     reduce using rule 64 (expr -> ID .)
    GREATER_THAN    reduce using rule 64 (expr -> ID .)
    LESS_THAN       reduce using rule 64 (expr -> ID .)
    GREATER_EQUAL   reduce using rule 64 (expr -> ID .)
    LESS_EQUAL      reduce using rule 64 (expr -> ID .)
    EQUAL           reduce using rule 64 (expr -> ID .)
    NOT_EQUAL       reduce using rule 64 (expr -> ID .)
    NUMBER          reduce using rule 64 (expr -> ID .)
    LETTER          reduce using rule 64 (expr -> ID .)
    SENTENCE        reduce using rule 64 (expr -> ID .)
    )               reduce using rule 64 (expr -> ID .)
    ,               reduce using rule 64 (expr -> ID .)
    .               reduce using rule 64 (expr -> ID .)
    AND             reduce using rule 64 (expr -> ID .)
    BUT             reduce using rule 64 (expr -> ID .)
    THEN            reduce using rule 64 (expr -> ID .)
    PIECE           reduce using rule 64 (expr -> ID .)
    BECAME          reduce using rule 64 (expr -> ID .)
    ATE             reduce using rule 64 (expr -> ID .)
    DRANK           reduce using rule 64 (expr -> ID .)
    SPOKE           reduce using rule 64 (expr -> ID .)
    SAID            reduce using rule 64 (expr -> ID .)
    ?               reduce using rule 64 (expr -> ID .)
    APOSTROPHE      shift and go to state 39
    (               shift and go to state 38

    actualParams                   shift and go to state 37

state 21

    (60) expr -> LOGICAL_NOT . expr
    (44) expr -> . expr + expr
    (45) expr -> . expr - expr
    (46) expr -> . expr * expr
    (47) expr -> . expr / expr
    (48) expr -> . expr % expr
    (49) expr -> . expr & expr
    (50) expr -> . expr | expr
    (51) expr -> . expr ^ expr
    (52) expr -> . expr LOGICAL_OR expr
    (53) expr -> . expr LOGICAL_AND expr
    (54) expr -> . expr GREATER_THAN expr
    (55) expr -> . expr LESS_THAN expr
    (56) expr -> . expr GREATER_EQUAL expr
    (57) expr -> . expr LESS_EQUAL expr
    (58) expr -> . expr EQUAL expr
    (59) expr -> . expr NOT_EQUAL expr
    (60) expr -> . LOGICAL_NOT expr
    (61) expr -> . ~ expr
    (62) expr -> . + expr
    (63) expr -> . - expr
    (64) expr -> . ID
    (65) expr -> . ID APOSTROPHE S expr PIECE
    (66) expr -> . STRING_LITERAL
    (67) expr -> . CHAR_LITERAL
    (68) expr -> . INT_LITERAL
    (69) expr -> . ( expr )
    (70) expr -> . ID actualParams

    LOGICAL_NOT     shift and go to state 21
    ~               shift and go to state 26
    +               shift and go to state 18
    -               shift and go to state 19
    ID              shift and go to state 20
    STRING_LITERAL  shift and go to state 22
    CHAR_LITERAL    shift and go to state 24
    INT_LITERAL     shift and go to state 25
    (               shift and go to state 17

    expr                           shift and go to state 40

state 22

    (66) expr -> STRING_LITERAL .

    +               reduce using rule 66 (expr -> STRING_LITERAL .)
    -               reduce using rule 66 (expr -> STRING_LITERAL .)
    *               reduce using rule 66 (expr -> STRING_LITERAL .)
    /               reduce using rule 66 (expr -> STRING_LITERAL .)
    %               reduce using rule 66 (expr -> STRING_LITERAL .)
    &               reduce using rule 66 (expr -> STRING_LITERAL .)
    |               reduce using rule 66 (expr -> STRING_LITERAL .)
    ^               reduce using rule 66 (expr -> STRING_LITERAL .)
    LOGICAL_OR      reduce using rule 66 (expr -> STRING_LITERAL .)
    LOGICAL_AND     reduce using rule 66 (expr -> STRING_LITERAL .)
    GREATER_THAN    reduce using rule 66 (expr -> STRING_LITERAL .)
    LESS_THAN       reduce using rule 66 (expr -> STRING_LITERAL .)
    GREATER_EQUAL   reduce using rule 66 (expr -> STRING_LITERAL .)
    LESS_EQUAL      reduce using rule 66 (expr -> STRING_LITERAL .)
    EQUAL           reduce using rule 66 (expr -> STRING_LITERAL .)
    NOT_EQUAL       reduce using rule 66 (expr -> STRING_LITERAL .)
    NUMBER          reduce using rule 66 (expr -> STRING_LITERAL .)
    LETTER          reduce using rule 66 (expr -> STRING_LITERAL .)
    SENTENCE        reduce using rule 66 (expr -> STRING_LITERAL .)
    )               reduce using rule 66 (expr -> STRING_LITERAL .)
    ,               reduce using rule 66 (expr -> STRING_LITERAL .)
    .               reduce using rule 66 (expr -> STRING_LITERAL .)
    AND             reduce using rule 66 (expr -> STRING_LITERAL .)
    BUT             reduce using rule 66 (expr -> STRING_LITERAL .)
    THEN            reduce using rule 66 (expr -> STRING_LITERAL .)
    PIECE           reduce using rule 66 (expr -> STRING_LITERAL .)
    BECAME          reduce using rule 66 (expr -> STRING_LITERAL .)
    ATE             reduce using rule 66 (expr -> STRING_LITERAL .)
    DRANK           reduce using rule 66 (expr -> STRING_LITERAL .)
    SPOKE           reduce using rule 66 (expr -> STRING_LITERAL .)
    SAID            reduce using rule 66 (expr -> STRING_LITERAL .)
    ?               reduce using rule 66 (expr -> STRING_LITERAL .)


state 23

    (10) varDecl -> ID HAD expr . type terminator
    (44) expr -> expr . + expr
    (45) expr -> expr . - expr
    (46) expr -> expr . * expr
    (47) expr -> expr . / expr
    (48) expr -> expr . % expr
    (49) expr -> expr . & expr
    (50) expr -> expr . | expr
    (51) expr -> expr . ^ expr
    (52) expr -> expr . LOGICAL_OR expr
    (53) expr -> expr . LOGICAL_AND expr
    (54) expr -> expr . GREATER_THAN expr
    (55) expr -> expr . LESS_THAN expr
    (56) expr -> expr . GREATER_EQUAL expr
    (57) expr -> expr . LESS_EQUAL expr
    (58) expr -> expr . EQUAL expr
    (59) expr -> expr . NOT_EQUAL expr
    (40) type -> . NUMBER
    (41) type -> . LETTER
    (42) type -> . SENTENCE

    +               shift and go to state 48
    -               shift and go to state 50
    *               shift and go to state 49
    /               shift and go to state 51
    %               shift and go to state 45
    &               shift and go to state 47
    |               shift and go to state 57
    ^               shift and go to state 55
    LOGICAL_OR      shift and go to state 56
    LOGICAL_AND     shift and go to state 42
    GREATER_THAN    shift and go to state 41
    LESS_THAN       shift and go to state 43
    GREATER_EQUAL   shift and go to state 46
    LESS_EQUAL      shift and go to state 54
    EQUAL           shift and go to state 53
    NOT_EQUAL       shift and go to state 44
    NUMBER          shift and go to state 31
    LETTER          shift and go to state 32
    SENTENCE        shift and go to state 30

    type                           shift and go to state 52

state 24

    (67) expr -> CHAR_LITERAL .

    +               reduce using rule 67 (expr -> CHAR_LITERAL .)
    -               reduce using rule 67 (expr -> CHAR_LITERAL .)
    *               reduce using rule 67 (expr -> CHAR_LITERAL .)
    /               reduce using rule 67 (expr -> CHAR_LITERAL .)
    %               reduce using rule 67 (expr -> CHAR_LITERAL .)
    &               reduce using rule 67 (expr -> CHAR_LITERAL .)
    |               reduce using rule 67 (expr -> CHAR_LITERAL .)
    ^               reduce using rule 67 (expr -> CHAR_LITERAL .)
    LOGICAL_OR      reduce using rule 67 (expr -> CHAR_LITERAL .)
    LOGICAL_AND     reduce using rule 67 (expr -> CHAR_LITERAL .)
    GREATER_THAN    reduce using rule 67 (expr -> CHAR_LITERAL .)
    LESS_THAN       reduce using rule 67 (expr -> CHAR_LITERAL .)
    GREATER_EQUAL   reduce using rule 67 (expr -> CHAR_LITERAL .)
    LESS_EQUAL      reduce using rule 67 (expr -> CHAR_LITERAL .)
    EQUAL           reduce using rule 67 (expr -> CHAR_LITERAL .)
    NOT_EQUAL       reduce using rule 67 (expr -> CHAR_LITERAL .)
    NUMBER          reduce using rule 67 (expr -> CHAR_LITERAL .)
    LETTER          reduce using rule 67 (expr -> CHAR_LITERAL .)
    SENTENCE        reduce using rule 67 (expr -> CHAR_LITERAL .)
    )               reduce using rule 67 (expr -> CHAR_LITERAL .)
    ,               reduce using rule 67 (expr -> CHAR_LITERAL .)
    .               reduce using rule 67 (expr -> CHAR_LITERAL .)
    AND             reduce using rule 67 (expr -> CHAR_LITERAL .)
    BUT             reduce using rule 67 (expr -> CHAR_LITERAL .)
    THEN            reduce using rule 67 (expr -> CHAR_LITERAL .)
    PIECE           reduce using rule 67 (expr -> CHAR_LITERAL .)
    BECAME          reduce using rule 67 (expr -> CHAR_LITERAL .)
    ATE             reduce using rule 67 (expr -> CHAR_LITERAL .)
    DRANK           reduce using rule 67 (expr -> CHAR_LITERAL .)
    SPOKE           reduce using rule 67 (expr -> CHAR_LITERAL .)
    SAID            reduce using rule 67 (expr -> CHAR_LITERAL .)
    ?               reduce using rule 67 (expr -> CHAR_LITERAL .)


state 25

    (68) expr -> INT_LITERAL .
